<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvgethints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shareHintsDes"
        android:textColor="@color/textColor"
        android:textSize="@dimen/content_text_size" />

    <Button
        android:id="@+id/btnGet20hints"
        android:layout_width="@dimen/pack_width"
        android:layout_height="@dimen/pack_height"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_rounrect_flow1"
        android:text="@string/get20hints"
        android:textColor="@color/textColor"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGet5hints"
        android:layout_width="@dimen/pack_width"
        android:layout_height="@dimen/pack_height"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_rounrect_flow1"
        android:text="@string/get5hints"
        android:textColor="@color/textColor"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvfreehints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/getFreeHints"
        android:textColor="@color/textColor"
        android:textSize="@dimen/content_text_size" />

    <Button
        android:id="@+id/btnShareApp"
        android:layout_width="@dimen/pack_width"
        android:layout_height="@dimen/pack_height"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_rounrect_flow2"
        android:text="@string/shareAppLabel"
        android:textColor="@color/textColor"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnWatchVideo"
        android:layout_width="@dimen/pack_width"
        android:layout_height="@dimen/pack_height"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_rounrect_flow3"
        android:text="@string/loadVideoLabel"
        android:textColor="@color/textColor"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold" />

</LinearLayout>